# grant-application-reviewer-os

./: .gitignore  Grant_Reviewing_Agent_Comprehensive_Documentation.md  extract_db_data.py  extract_doc.py  extracted_db_data.json  grant-reviewer-nofo-rubric.patch  grant-reviewer-process-button.patch  grant-reviewer-safe-workflow.patch  grant-reviewer-single-workspace-ui.patch  grant-reviewer-ui.patch  grant-reviewer-zip-upload (1).patch  railpack.json  todo.md  vercel.json
HRSA 026-19/: HRSA-26-019_Reviewer_Worksheet.docx
docs/: research_plan_HRSA_SAMHSA_grants.md
extract/: hrsa_application_guide.txt  hrsa_general_terms_fy25.txt  hrsa_guidelines_strengths_weaknesses.txt  hrsa_scoring_rubric.txt  samhsa_competitive_application_manual.txt  samhsa_fy2025_application_guide.txt  samhsa_scoring_criteria_sp-14-002.txt
federal-grant-reviewer/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  vercel.json
grant-reviewer-app/: DEPLOYMENT_GUIDE.md  README.md  start_backend.sh
grant-reviewer-mcp/: README.md  main.py  mcp-server.json  pyproject.toml  run.sh  run_three_reviews.py  server.py  three-reviews.example.json  three-reviews.smoke.json
grant-reviewer-mcp/examples/: usage_examples.py
grant-reviewer-mcp/src/grant_reviewer/: __init__.py  anthropic_review.py  comment_generator.py  document_processor.py  evaluator.py  report_generator.py  safe_review.py  scoring_engine.py
grant-reviewer-mcp/tests/: test_safe_review.py
grant-reviewer-v2/: grant_reviewer.db  package.json  pnpm-lock.yaml  requirements-fullstack.txt  server.py  start.sh  (+1 more)
(+142 files in other folders)
