[project]
name = "grant-reviewer-mcp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.6",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "python-dateutil>=2.9.0.post0",
    "python-docx>=1.2.0",
    "typing-extensions>=4.14.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
